fixed scrollbar style for code block

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,41 @@ body {
         animation-delay: 4s;
     }
 }
+
+/* Scrollbar generator from CSS Portal */
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #144464 #011221;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+}
+*::-webkit-scrollbar-track {
+    border-radius: 16px;
+    background-color: #011221;
+}
+
+*::-webkit-scrollbar-track:hover {
+    background-color: #011221;
+}
+
+*::-webkit-scrollbar-track:active {
+    background-color: #011221;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 16px;
+    background-color: #144464;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #144464;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #144464;
+}
